# pagan

./: .gitignore  2g3pjrsq.5wa.txt  readme.txt
src/: CMakeLists.txt  Doxyfile - Copy.in  Doxyfile.in
src/app/: CMakeLists.txt
src/app/CmakeTest/: CMakeLists.txt  main.cpp  test1.json
src/app/JsonTest/: main.cpp
src/app/LogTest/: logstream.h  main.cpp
src/app/SconsTest/: main.cpp
src/app/ai-tests/: CMakeLists.txt
src/app/ai-tests/ai-test1/: CMakeLists.txt
src/app/ai-tests/bt-test/: CMakeLists.txt
src/app/ai-tests/dict-test/: CMakeLists.txt
src/app/ai-tests/fov-test/: CMakeLists.txt
src/app/dungen-tests/: CMakeLists.txt
src/app/dungen-tests/dungen-test1/: CMakeLists.txt
src/app/ecs-test/: CMakeLists.txt
src/app/ecs-test/src/: DoorState.cpp  DoorState.h  RegisterComponents.cpp  RegisterComponents.h  Stats.cpp  Stats.h  TextureSet.h  cmptest.h  components.h  main.cpp
src/app/ecs-test2/: CMakeLists.txt
src/app/ecs-test2/src/: DoorState.cpp  DoorState.h  MoveCost.cpp  MoveCost.h  RegisterComponents.cpp  Stats.h  TextureSet.cpp  TextureSet.h  cmptest.cpp  main.cpp
src/app/ecs-tests/: CMakeLists.txt
src/app/ecs-tests/ecs_test1/: CMakeLists.txt  config.h  event.h  main.cpp  myevent.h
src/app/ecs-tests/ecs_test2/: CMakeLists.txt  main.cpp
src/app/ecs-tests/ecs_test3/: CMakeLists.txt  main.cpp
src/app/ecs-tests/ecs_test4/: CMakeLists.txt  main.cpp
src/app/ecs-tests/ecs_test5/: CMakeLists.txt  main.cpp
src/app/io-tests/: CMakeLists.txt
src/app/io-tests/io-test1/: CMakeLists.txt
src/app/oxy-tests/: CMakeLists.txt
src/app/oxy-tests/oxy-test1/: CMakeLists.txt
src/app/oxy-tests/oxy-test2/: CMakeLists.txt
src/app/qt-tests/: CMakeLists.txt
src/app/qt-tests/test1-console/: CMakeLists.txt
src/app/rlapp-test/: CMakeLists.txt
src/app/rlapp-test/src/: main.cpp
src/app/roguelike-tests/: CMakeLists.txt
src/app/roguelike-tests/RLTest1/: CMakeLists.txt  main.cpp
src/app/sdl-tests/: CMakeLists.txt
src/app/sdl-tests/sdl-test1/: CMakeLists.txt
src/app/sdl-tests/sdl-test2/: CMakeLists.txt
src/app/serialize-test/: CMakeLists.txt
src/app/serialize-test/src/: main.cpp
src/cmake/: FindArtemis.cmake  FindCurses.cmake  FindGLM.cmake  FindJSONSPIRIT.cmake  FindPystring.cmake  FindRapidjson.cmake  FindSDL.cmake  FindSDL_image.cmake  FindSDL_ttf.cmake  FindSignal.cmake  Findpugixml.cmake
src/contrib/: .gitignore
src/contrib/oxygine-framework/: .hg_archival.txt  CMakeLists.txt
src/contrib/oxygine-framework/libs/: SDL2.exp  SDL2.lib  SDL2main.lib
src/contrib/pystring/: .sconsign.dblite  CMakeLists.txt
src/data/: behaviors.xml  ecs.xml  ecs_out.xml  tiledesc.xml
src/lib/: CMakeLists.txt
src/lib/ai/: CMakeLists.txt
src/lib/ai/fov/: FovLookup.h  fov0.cpp  fov0.h  fov1.cpp  fov1.h
src/lib/ai/path/: Astar.cpp  Astar.h  AstarMulti.h
src/lib/core/: CMakeLists.txt
src/lib/core/app/: application.cpp  application.h  sdlapp.cpp  sdlapp.h  sdlwin.cpp  sdlwin.h
src/lib/core/container/: Array2D.h  Array2DView.h  Array2D_utils.h  ArrayShape2D.h  ArrayStorage.h  box2.h  dict.h  dict2.h
src/lib/core/event/: Event.cpp  Event.h
src/lib/core/img/: imglib.cpp  imglib.h
src/lib/core/math/: norm.h
src/lib/core/noise/: perlin.cpp  perlin.h
src/lib/core/sdl/: font.cpp  font.h  pointers.cpp  pointers.h  util.h
src/lib/core/serialize/: serialize.cpp  serialize.h  serialize.txt  serialize_glm.hpp  serialize_std.hpp  util.cpp  util.h
src/lib/core/texture/: subtexturelib.cpp  subtexturelib.h  texture.cpp  texture.h  textureatlas.cpp  textureatlas.h  texturelib.cpp  texturelib.h
src/lib/core/util/: cfgdata.cpp  cfgdata.h  cfgtree.cpp  cfgtree.h  cmdopt.cpp  cmdopt.h  color.cpp  color.h  conversions.cpp  conversions.h  enum.h  glm_utils.h  idgen.h  idgenrange.h  image.cpp  image.h  json_conversions.cpp  json_conversions.h  json_conversions_glm.h  jsonutils.h  logstream.cpp  logstream.h  notes.txt  predicates.h  rand.cpp  rand.h  singleton.h  string.h  textmod.h  textmodreader.h  xml_conversions.cpp  xml_conversions.h
src/lib/dungen/: area.cpp  area.h  corr.h  dungen.h  util.cpp
src/lib/dungen_/: CMakeLists.txt  constraints.cpp  constraints.h  corr.cpp  dungen.cpp  dungen.h  room.cpp  room.h  util.h
src/lib/ecs/: ActionMgr.cpp  ActionMgr.h  Archetype.h  CMakeLists.txt  Component.h  ComponentBase.cpp  ComponentBase.h  ComponentHelpers.cpp  ComponentHelpers.h  ComponentId.h  ComponentMgr.h  ComponentPack.h  ComponentQuery.cpp  ComponentQuery.h  ComponentStorage.h  Entity.cpp  Entity.h  Entity2.cpp  Entity2.h  EntityComponents.cpp  EntityComponents.h  EntityData.cpp  EntityData.h  EntityGlobals.h  EntityMgr.cpp  EntityMgr.h  Event.cpp  Event.h  ExampleComponent.cpp  ExampleComponent.h  ExampleSystem.cpp  ExampleSystem.h  Exemplar.h  QueryBase.cpp  QueryBase.h  QueryExpression.cpp  QueryExpression.h  System.h  SystemBase - Copy.h  SystemBase.cpp  (+16 more)
src/lib/ecs/data/: example.xml  example_in.xml  example_out.xml
src/lib/ecs/src/: ComponentBase.cpp  ComponentBase.h  EntityData.cpp  EntityData.h  component.h  ecs-config.h  ecs.cpp  ecs.h  serialize_ecs.cpp  serialize_ecs.h
src/lib/ecs/systems/: InputKey.cpp  InputKey.h
src/lib/ecs/unused/: ComponentMgr.h
src/lib/ecs_old/: ActionMgr.cpp  CMakeLists.txt  Component.h  ComponentBase.cpp  ComponentBase.h  ComponentHelpers.cpp  Entity.cpp  Entity.h  EntityData.h  EntityGlobals.cpp  EntityGlobals.h  Event.h  EventHandlerQuery.h  ExampleComponent.cpp  Exemplar.h  SystemMgr.h  ecs.cpp  ecs_config.cpp  ecs_config.h
src/lib/input/: CMakeLists.txt
src/lib/io/: CMakeLists.txt
src/lib/io/image/: utils.cpp  utils.h
src/lib/rl/: ActionMgrRL.cpp  ActionMgrRL.h  CMakeLists.txt  EntityMgrRL.h  GameApp.cpp  GameApp.h  GameEntity.cpp  GameEntity.h  GameEntityLib.cpp  GameEntityLib.h  SystemMgrRL.cpp  SystemMgrRL.h  array2d.h  asciirep.cpp  asciirep.h  level.h  levelview.h  levelview.hpp  tile.cpp  tile.h  tilelib.cpp  tilelib.h
src/lib/rl/__systems/: systems.h
src/lib/rl_old/: ActionMgrRL.cpp  CMakeLists.txt  EntityMgrRL.cpp  GameApp.cpp  GameApp.h  SystemMgrRL.cpp
src/lib/rlut/: CMakeLists.txt
(+483 files in other folders)
